new files added

--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
-    <link rel="icon" type="image/svg+xml" href="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcQAdtMW10ZILwDMXGnKmyBw2y7EH3Hvu7zMzg&s" />
+    <link rel="icon" type="image/svg+xml" href="https://static.vecteezy.com/system/resources/thumbnails/024/235/881/small_2x/cv-icon-resume-illustration-sign-user-data-symbol-or-logo-vector.jpg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Rbuilder</title>
 
